Bug 277679 - KMail message pane visual inconsistency when using Enterprise Headers
Summary: KMail message pane visual inconsistency when using Enterprise Headers
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: Git (master)
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-13 08:50 UTC by Alex Wright
Modified: 2012-07-22 17:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments
Screen shot showing issue (24.17 KB, image/png)
2011-07-13 08:50 UTC, Alex Wright
Details
Screen shot showing overlapping attachment (13.78 KB, image/png)
2011-07-13 09:14 UTC, Alex Wright
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Wright 2011-07-13 08:50:58 UTC
Created attachment 61835 [details]
Screen shot showing issue

Version:           Git (master) (using Devel) 
OS:                Linux

Please see the screen shot!

The box containing the warning about external HTML references overlaps the grey bars at the side of the message pane when the message is scrolled to the right.

This occurs both in the message preview, and when viewing a message in its own window.

Reproducible: Always

Steps to Reproduce:
0. Switch to Enterprise Headers
1. View an HTML message in a window that gives a horizontal scroll bar.
2. Scroll to the right, moving the message left.


Actual Results:  
The red box with the warning now overlaps the grey bar on the left, while the rest of the message disappears behind it.

Expected Results:  
The whole message should slide under the grey bar on the left.

Running KDE 4.7-rc2.
Comment 1 Alex Wright 2011-07-13 09:14:58 UTC
Created attachment 61837 [details]
Screen shot showing overlapping attachment
Comment 2 Alex Wright 2011-07-13 09:15:26 UTC
This would also appear to be the case with attachments.
Comment 3 Allen Winter 2012-05-08 23:56:50 UTC
Git commit 1a5b50a2b332499462f5ec47e5fb235223863d28 by Allen Winter.
Committed on 09/05/2012 at 01:55.
Pushed by winterz into branch 'master'.

Fix connect() when checking radio buttons

FIXED-IN: 4.8.4
MERGE: 4.8

M  +5    -1    kleopatra/dialogs/ownertrustdialog.cpp
M  +0    -80   kleopatra/dialogs/ownertrustdialog.ui

http://commits.kde.org/kdepim/1a5b50a2b332499462f5ec47e5fb235223863d28
Comment 4 Allen Winter 2012-05-08 23:57:26 UTC
Git commit 4ab6b6179bfa953e245a222a6b669f6d9316a648 by Allen Winter.
Committed on 09/05/2012 at 01:55.
Pushed by winterz into branch 'KDE/4.8'.

Fix connect() when checking radio buttons

FIXED-IN: 4.8.4
MERGE: 4.8
(cherry picked from commit 1a5b50a2b332499462f5ec47e5fb235223863d28)

M  +5    -1    kleopatra/dialogs/ownertrustdialog.cpp
M  +0    -80   kleopatra/dialogs/ownertrustdialog.ui

http://commits.kde.org/kdepim/4ab6b6179bfa953e245a222a6b669f6d9316a648
Comment 5 Allen Winter 2012-05-09 00:06:59 UTC
reopening.  I meant to resolve 277697 instead.
Comment 6 Martin Koller 2012-07-22 17:45:01 UTC
The problem with the attachment is solved (duplicate with bug #235459)
The problem with the "HTML external refs" I can not reproduce with current KDE/4.9 git