Fix connect() when checking radio buttons

FIXED-IN: 4.8.4
BUG: 277679
MERGE: 4.8